# cg1gpu

./: .gitignore  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/: shader.cs
src/: CMakeLists.txt  Main.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
